feat(security): harden signing-service and SRI MCP
signing-service (Java/Spring Boot):
- CorsConfig: read allowed origins from SIGNING_ALLOWED_ORIGINS env var
  (no longer wildcard '*'); restrict methods and headers (mcphub-5ub)
- SignatureController: require X-Signing-Key header on /sign and
  /certificate/info endpoints; constant-time compare; refuse-by-default
  if SIGNING_API_KEY is unset or 'changeme' (mcphub-5ub)

docker-compose.yml:
- signing-service: only expose 18081 internally, not published to host
  (defense in depth, even if auth is bypassed) (mcphub-5ub)
- mcp-server: pass SIGNING_API_KEY through env (mcphub-5ub)
- Add SIGNING_API_KEY + SIGNING_ALLOWED_ORIGINS envs
- healthcheck: correct path /api/v1/signature/health (mcphub-92k)

.github/workflows/docker.yml:
- Standardize on secrets.GITHUB_TOKEN (mcphub-hqu)

server.py:
- Include X-Signing-Key header in httpx.post to signing-service (mcphub-5ub)